用iframe引入图片

--- a/client/templates/components/openBG/openBg.html
+++ b/client/templates/components/openBG/openBg.html
@@ -1,5 +1,6 @@
 <template name="openBg">
 	<div class="open-bg {{state}}">
-		<img src="" alt="">
+		<!-- {{{showImg 'http://p2.zhimg.com/10/7b/107bb4894b46d75a892da6fa80ef504a.jpg'}}} -->
+		{{{imgSrc}}}
 	</div>
 </template>
