--- a/client/templates/homePage/homePage.html
+++ b/client/templates/homePage/homePage.html
@@ -17,8 +17,7 @@
 
 <template name="latestNewsItem">
 	<li class="latest-news-item">
-		{{{itemImg}}}
-		
+		<img src="{{itemImg}}" alt="">		
 		<a href="/detail/{{id}}">{{title}}</a>
 	</li>
 </template>
