--- a/client/stylesheets/components/openBg/openBg.import.less
+++ b/client/stylesheets/components/openBg/openBg.import.less
@@ -2,21 +2,26 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	right: 0;
+	bottom: 0;
 	background-color: #fff;
 
 	&.hide {
 		display: none;
 	}
-
-	//iframe
-	body {
-		margin: 0;
-		padding: 0;
+	
+	img {
+		width: 100%;
+		height: 100%;
+		animation: zoomOut 2.5s ease-in-out;
 	}
 
-	iframe {
-		height: 100%;
+	@keyframes zoomOut {
+		from {
+			transform: scale(1)
+		}
+		to {
+			transform: scale(1.2)
+		}
 	}
 }
