--- a/client/stylesheets/common.import.less
+++ b/client/stylesheets/common.import.less
@@ -2,6 +2,8 @@ html,
 body {
 	color: @commonFontColor;
 	font-size: 14px;
+	margin: 0;
+	padding: 0;
 }
 
 ul, 
@@ -15,6 +17,6 @@ a:link,
 a:visited,
 a:hover,
 a:active {
-	// text-decoration: none;
-	color: @commonFontColor;
+	text-decoration: none;
+	color: #355c7d;
 }
