--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -1,8 +1,12 @@
+@import "fonts.import.less";
+
 @import "components/openBg/openBg.import.less";
 
 @import "detailPage/detailPage.import.less";
 
 @import "homePage/homePage.import.less";
+
+@import "header/header.import.less";
 
 @import "common.import.less";
 @import "variables.import.less";
