--- a/client/templates/baseLayout/baseLayout.html
+++ b/client/templates/baseLayout/baseLayout.html
@@ -1,6 +1,7 @@
 <template name="baseLayout">
 	<header>
-		{{> yield 'header'}}
+		<!-- {{> yield 'header'}} -->
+		{{> header}}
 	</header>
 
 	<section>
