--- a/client/stylesheets/components/openBg/openBg.import.less
+++ b/client/stylesheets/components/openBg/openBg.import.less
@@ -13,15 +13,27 @@
 	img {
 		width: 100%;
 		height: 100%;
+		-webkit-animation: zoomOut 2.5s ease-in-out;
+		-moz-animation: zoomOut 2.5s ease-in-out;
+		-ms-animation: zoomOut 2.5s ease-in-out;
+		-o-animation: zoomOut 2.5s ease-in-out;
 		animation: zoomOut 2.5s ease-in-out;
 	}
 
 	@keyframes zoomOut {
 		from {
-			transform: scale(1)
+			transform: -webkit-scale(1);
+			transform: -moz-scale(1);
+			transform: -ms-scale(1);
+			transform: -o-scale(1);
+			transform: scale(1);
 		}
 		to {
-			transform: scale(1.2)
+			transform: -webkit-scale(1.2);
+			transform: -moz-scale(1.2);
+			transform: -ms-scale(1.2);
+			transform: -o-scale(1.2);
+			transform: scale(1.2);
 		}
 	}
 }
