--- a/client/stylesheets/detailPage/detailPage.import.less
+++ b/client/stylesheets/detailPage/detailPage.import.less
@@ -1,4 +1,6 @@
 .detail-page {
+	padding-bottom: 15px;
+
 	h3 {
 		text-align: center;
 	}
@@ -13,6 +15,7 @@
 	}
 
 	.avatar {
-		width: auto;
+		width: 34px;
+		height: 34px;
 	}
 }
