--- a/client/stylesheets/homePage/homePage.import.less
+++ b/client/stylesheets/homePage/homePage.import.less
@@ -1,7 +1,47 @@
 .home-page {
-
+	.time-line {
+		padding: 15px 15px 0;
+		margin: 0;
+	}
 
 	.head {
 		color: #222;
+	}
+
+	.latest-news {
+		.latest-news-item {
+			text-align: center;
+			padding: 15px;
+			clear: both;
+			height: 60px;
+
+			a {
+				// display: -webkit-flex;
+				// display: -moz-flex;
+				// display: -ms-flex;
+				// display: -o-flex;
+				// display: flex;
+				// align-items: center;
+				width: 100%;
+				height: 100%;
+			}
+
+			.image {
+				float: left;
+				width: 20%;
+				img {
+					width: 60px;
+					height: 60px;
+				}
+			}
+			.title {
+				float: left;
+				width: 70%;
+				margin-left: 15px;
+				font-weight: bold;
+				display: inline;
+				text-align: left;
+			}
+		}
 	}
 }
