--- a/client/stylesheets/header/header.import.less
+++ b/client/stylesheets/header/header.import.less
@@ -1,4 +1,5 @@
 .header {
+	position: relative;
 	margin: 0;
 	padding: 15px 0;
 	color: #fff;
@@ -7,4 +8,31 @@
 	text-align: center;
 	font-family: 'Ailerons-Typeface', sans-serif;
 	font-size: 24px;
+	height: 30px;
+
+	.go-back {
+		display: inline-block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 60px;
+		height: 60px;
+		background-image: url('/img/arrow-left.png');
+		background-size: 24px 24px;
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+	}
+
+	.menu {
+		display: inline-block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 60px;
+		height: 60px;
+		background-image: url('/img/menu.png');
+		background-size: 24px 24px;
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+	}
 }
