--- a/client/stylesheets/homePage/homePage.import.less
+++ b/client/stylesheets/homePage/homePage.import.less
@@ -14,6 +14,7 @@
 			padding: 15px;
 			clear: both;
 			height: 60px;
+			display: block;
 
 			a {
 				// display: -webkit-flex;
@@ -21,7 +22,6 @@
 				// display: -ms-flex;
 				// display: -o-flex;
 				// display: flex;
-				// align-items: center;
 				width: 100%;
 				height: 100%;
 			}
