--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -1,6 +1,8 @@
 @import "fonts.import.less";
 
 @import "components/openBg/openBg.import.less";
+@import "components/loading/loading.import.less";
+@import "components/swiper/swiper.import.less";
 
 @import "detailPage/detailPage.import.less";
 
