--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -1,3 +1,13 @@
 <template name="header">
-	<h1 class="header">Zhihu Daily</h1>
+	<h1 class="header">
+		{{#if isActiveRoute 'home.page'}}
+			<i class="menu"></i>
+		{{/if}}
+
+		{{#if isActiveRoute 'detail.page'}}
+			<i class="go-back"></i>
+		{{/if}}
+		
+		Zhihu Daily
+	</h1>
 </template>
