--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -10,5 +10,7 @@
 
 @import "header/header.import.less";
 
+@import "aside/aside.import.less";
+
 @import "common.import.less";
 @import "variables.import.less";
