--- a/client/stylesheets/common.import.less
+++ b/client/stylesheets/common.import.less
@@ -6,6 +6,14 @@ body {
 	padding: 0;
 }
 
+body {
+	position: relative;
+
+	> section {
+		margin-top: 60px;
+	}
+}
+
 ul, 
 li {
 	list-style: none;
@@ -18,7 +26,7 @@ a:visited,
 a:hover,
 a:active {
 	text-decoration: none;
-	color: #355c7d;
+	color: @commonFontColor;
 
 	-webkit-tap-highlight-color: transparent;
   	-webkit-touch-callout: none;
