--- a/client/stylesheets/components/swiper/swiper.import.less
+++ b/client/stylesheets/components/swiper/swiper.import.less
@@ -1,6 +1,5 @@
 .swiper-container {
     width: 100%;
-    height: 270px;
 
     .swiper-slide {
     	display: inline-block;
@@ -14,6 +13,7 @@
     		left: 0;
     		color: #fff;
     		margin-left: 15px;
+    		font-size: 16px;
     	}
     }
 
