--- a/client/stylesheets/detailPage/detailPage.import.less
+++ b/client/stylesheets/detailPage/detailPage.import.less
@@ -1,5 +1,5 @@
 .detail-page {
-	padding-bottom: 15px;
+	padding: 15px 0;
 
 	h3 {
 		text-align: center;
@@ -17,5 +17,18 @@
 	.avatar {
 		width: 34px;
 		height: 34px;
+	}
+
+	.view-more a {
+		color: @subFontColor;
+		display: inline-block;
+    	padding-bottom: 3px;
+    	border-bottom: 1px solid @subFontColor;
+    	margin: 0 auto;
+    	width: 84px;
+    	&:active {
+			background-color: @subFontColor;
+    		color: #fff;
+    	}
 	}
 }
