--- a/client/stylesheets/header/header.import.less
+++ b/client/stylesheets/header/header.import.less
@@ -1,14 +1,18 @@
 .header {
-	position: relative;
+	position: fixed;
+	top: 0;
+	left: 0;
 	margin: 0;
 	padding: 15px 0;
-	color: #fff;
-	background-color: #f67280;
+	color: @whiteFontColor;
+	background-color: @mainBgColor;
 	font-weight: normal;
 	text-align: center;
 	font-family: 'Ailerons-Typeface', sans-serif;
 	font-size: 24px;
 	height: 30px;
+	width: 100%;
+	z-index: 200;
 
 	.go-back {
 		display: inline-block;
