添加分页，可查看历史内容 && 不把内容存在collection里面，之前想错了 && 垃圾浏览器不做兼容了

--- a/client/stylesheets/common.import.less
+++ b/client/stylesheets/common.import.less
@@ -8,6 +8,7 @@ body {
 
 body {
 	position: relative;
+	font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 	> section {
 		margin-top: 60px;
