--- a/client/stylesheets/components/loading/loading.import.less
+++ b/client/stylesheets/components/loading/loading.import.less
@@ -34,7 +34,7 @@
     height: 40px;
 
     border-radius: 0 90px 90px 0;
-    background: black;
+    background: #c06c84;
     background-image: linear-gradient(#c06c84, #f67280);
 }
 .tcon-loader--spinner360:after
