--- a/client/stylesheets/components/swiper/swiper.import.less
+++ b/client/stylesheets/components/swiper/swiper.import.less
@@ -1,7 +1,13 @@
 .swiper-container {
     width: 100%;
+    
+    .swiper-wrapper {
+        width: 100%;
+    }
+
 
     .swiper-slide {
+        width: 100%;
     	display: inline-block;
     	position: relative;
     	img {
@@ -12,8 +18,9 @@
     		bottom: 20px;
     		left: 0;
     		color: #fff;
-    		margin-left: 15px;
-    		font-size: 16px;
+    		margin: 15px;
+    		font-size: 22px;
+            text-align: justify;
     	}
     }
 
