--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -3,6 +3,7 @@
 @import "components/openBg/openBg.import.less";
 @import "components/loading/loading.import.less";
 @import "components/swiper/swiper.import.less";
+@import "components/pagination/pagination.import.less";
 
 @import "detailPage/detailPage.import.less";
 
