--- a/client/templates/aside/aside.html
+++ b/client/templates/aside/aside.html
@@ -1,7 +1,7 @@
 <template name="aside">
 	<section class="aside-menu {{class}}">
 		<ul>
-			<li><a href class="go-home">Home</a></li>
+			<li><a href class="go-home">首页</a></li>
 			{{#each theme}}
 				<li>
 					<a href class="get-theme-content">
