--- a/client/templates/components/swiper/swiper.html
+++ b/client/templates/components/swiper/swiper.html
@@ -6,11 +6,10 @@
 	        <!-- Slides -->
 	        {{#each topStory}}
 	        	<a class="swiper-slide" href="/detail/{{id}}">
-					<img src="{{imagePath}}" alt="">
+					<img src="{{imagePath}}" alt="{{title}}">
 					<p>{{title}}</p>
 	        	</a>
 	        {{/each}}
-	        ...
 	    </div>
 	    <!-- If we need pagination -->
 	    <div class="swiper-pagination"></div>
