--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -6,6 +6,10 @@
 
 		{{#if isActiveRoute 'detail.page'}}
 			<i class="go-back"></i>
+			
+			<div class="diamond">
+				<img src="/img/animat-diamond-color.gif" alt="">
+			</div>
 		{{/if}}
 		
 		Zhihu Daily
