--- a/client/stylesheets/aside/aside.import.less
+++ b/client/stylesheets/aside/aside.import.less
@@ -1,24 +1,25 @@
 .aside-menu {
 	position: fixed;
 	top: 60px;
-	left: 0;
-	width: 60%;
+	right: -100%;
+	width: 100%;
 	height: 100%;
-	background-color: #334;
+	background-color: #547;
 	z-index: 200;
-	transform: -webkit-translate(-100%);
-	transform: -moz-translate(-100%);
-	transform: -ms-translate(-100%);
-	transform: -o-translate(-100%);
-	transform: translate(-100%);
-	transition: .6s;
+	// transform: -webkit-translate(-100%) scale(0);
+	// transform: -moz-translate(-100%) scale(0);
+	// transform: -ms-translate(-100%) scale(0);
+	// transform: -o-translate(-100%) scale(0);
+	// transform: translate(-100%) scale(0);
+	transition: .5s;
 
 	&.open {
-		transform: -webkit-translate(0);
-		transform: -moz-translate(0);
-		transform: -ms-translate(0);
-		transform: -o-translate(0);
-		transform: translate(0);
+		right: 0%;
+		// transform: -webkit-translate(0) scale(1);
+		// transform: -moz-translate(0) scale(1);
+		// transform: -ms-translate(0) scale(1);
+		// transform: -o-translate(0) scale(1);
+		// transform: translate(0) scale(1);
 	}
 
 	ul {
