--- a/client/stylesheets/detailPage/detailPage.import.less
+++ b/client/stylesheets/detailPage/detailPage.import.less
@@ -1,8 +1,8 @@
 .detail-page {
-	padding: 15px 0;
+	padding: 10px 0 15px;
 
 	h3 {
-		text-align: center;
+		margin: 15px 20px;
 	}
 
 	.main-wrap {
