--- a/client/stylesheets/header/header.import.less
+++ b/client/stylesheets/header/header.import.less
@@ -31,7 +31,7 @@
 		display: inline-block;
 		position: absolute;
 		top: 0;
-		left: 0;
+		right: 0;
 		width: 60px;
 		height: 60px;
 		background-image: url('/img/menu.png');
@@ -39,4 +39,19 @@
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
 	}
+
+	.diamond {
+        position: absolute;
+        top: 0px;
+        right: 0;
+        width: 60px;
+        height: 60px;
+        z-index: 999;
+        // margin-left: -40px;
+        img {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
+    }
 }
