--- a/client/stylesheets/homePage/homePage.import.less
+++ b/client/stylesheets/homePage/homePage.import.less
@@ -1,14 +1,37 @@
+.home-page {
+    .diamond {
+        position: fixed;
+        top: 0px;
+        right: 0;
+        width: 60px;
+        height: 60px;
+        z-index: 999;
+        // margin-left: -40px;
+        img {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
+    }
+}
+
 .main-page,
 .theme-page
 {
     .time-line
     {
         margin: 0;
-        padding: 15px 15px 0;
+        padding: 15px;
+        font-family: 'Ailerons-Typeface', sans-serif;
+        font-size: 18px;
     }
     .head
     {
         color: #222;
+    }
+    .latest-news {
+        // background-color: #847;
+        padding: 5px 0;
     }
     .home-list-item
     {
@@ -17,42 +40,73 @@
 
         height: 60px;
         padding: 15px;
+        margin: 10px;
+
+        // background-color: #2a363b;
 
         text-align: center;
         a
         {
-            // display: -webkit-flex;
-            // display: -moz-flex;
-            // display: -ms-flex;
-            // display: -o-flex;
-            // display: flex;
             width: 100%;
             height: 100%;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-flex;
+            display: -ms-flex;
+            display: -o-flex;
+            display: flex;
+            justify-content: -webkit-space-around;
+            justify-content: -moz-space-around;
+            justify-content: -ms-space-around;
+            justify-content: -o-space-around;
+            justify-content: space-around;
         }
         .image
         {
-            float: left;
-            background-color: #fff;
-
-            width: 20%;
+            background-color: transparent;
+            width: 25%;
+            -webkit-box-flex: 1; 
+            -webkit-flex: 1;
+            -moz-flex: 1;
+            -ms-flex: 1;
+            -o-flex: 1;
+            flex: 1;
             img
             {
                 width: 60px;
                 height: 60px;
+                border-radius: 50%;
             }
         }
         .title
         {
-            font-weight: bold;
+            width: 75%;
+            -webkit-box-flex: 3; 
+            display: -webkit-flex;
+            display: -moz-flex;
+            display: -ms-flex;
+            display: -o-flex;
+            display: flex;
+            align-items: -webkit-center;
+            align-items: -moz-center;
+            align-items: -ms-center;
+            align-items: -o-center;
+            align-items: center;
+            -webkit-flex: 3;
+            -moz-flex: 3;
+            -ms-flex: 3;
+            -o-flex: 3;
+            flex: 3;
 
-            display: inline;
-            float: left;
-
-            width: 70%;
-            margin-left: 15px;
+            margin-left: 35px;
+            margin-top: 10px;
 
             text-align: left;
         }
+
+    }
+    ul {
+        margin: -5px 0;
     }
 }
 
@@ -64,6 +118,6 @@
     }
 
     h2 {
-        margin-left: 15px;
+        margin: 15px;
     }
 }
