--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -1,5 +1,5 @@
 <head>
-	<title>知乎日报</title>
+	<title>Zhihu Daily | Troy</title>
 	<meta name="viewport" content="initial-scale=1, user-scalable=no">
 	<meta name="author" content="唐锐 | Troy">
 	<meta name="description" content="知乎日报Web版">
