--- a/client/stylesheets/header/header.import.less
+++ b/client/stylesheets/header/header.import.less
@@ -25,19 +25,21 @@
 		background-size: 24px 24px;
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
+		cursor: pointer;
 	}
 
 	.menu {
 		display: inline-block;
 		position: absolute;
 		top: 0;
-		right: 0;
+		left: 0;
 		width: 60px;
 		height: 60px;
 		background-image: url('/img/menu.png');
 		background-size: 24px 24px;
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
+		cursor: pointer;
 	}
 
 	.diamond {
@@ -47,6 +49,7 @@
         width: 60px;
         height: 60px;
         z-index: 999;
+        cursor: pointer;
         // margin-left: -40px;
         img {
             width: 100%;
