--- a/client/stylesheets/common.import.less
+++ b/client/stylesheets/common.import.less
@@ -13,6 +13,13 @@ body {
 	> section {
 		margin-top: 60px;
 	}
+
+	@media screen and (min-width: 600px) {
+		> section {
+			width: 600px;
+			margin: 60px auto 0;
+		}
+    }
 }
 
 ul, 
@@ -29,6 +36,12 @@ a:active {
 	text-decoration: none;
 	color: @commonFontColor;
 
+	-webkit-tap-highlight-color: transparent;
+  	-webkit-touch-callout: none;
+  	-webkit-user-select: none;
+}
+
+* {
 	-webkit-tap-highlight-color: transparent;
   	-webkit-touch-callout: none;
   	-webkit-user-select: none;
