--- a/client/stylesheets/components/pagination/pagination.import.less
+++ b/client/stylesheets/components/pagination/pagination.import.less
@@ -1,7 +1,7 @@
 .pagination {
-    // display: -webkit-flex;
-    // display: -moz-flex;
-    // display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
     display: -webkit-box;
 	height: 60px;
 	line-height: 60px;
@@ -9,10 +9,16 @@
     .prev, 
     .next {
     	height: 100%;
-        // -webkit-flex: 1;
-        // -moz-flex: 1;
-        // flex: 1;
+        -webkit-flex: 1;
+        -moz-flex: 1;
+        flex: 1;
          -webkit-box-flex: 1;
         text-align: center;
+        cursor: pointer;
+
+        &:active {
+            background-color: #eee;
+            border-radius: 4px;
+        }
     }
 }
