--- a/client/stylesheets/homePage/homePage.import.less
+++ b/client/stylesheets/homePage/homePage.import.less
@@ -23,7 +23,7 @@
         margin: 0;
         padding: 15px;
         font-family: 'Ailerons-Typeface', sans-serif;
-        font-size: 18px;
+        font-size: 24px;
     }
     .head
     {
@@ -42,7 +42,12 @@
         padding: 15px;
         margin: 10px;
 
-        // background-color: #2a363b;
+        @media screen and (min-width: 600px) {
+            &:hover {
+                background-color: #f8be95;
+                border-radius: 4px;
+            }
+        }
 
         text-align: center;
         a
@@ -80,6 +85,7 @@
         }
         .title
         {
+            font-size: 16px;
             width: 75%;
             -webkit-box-flex: 3; 
             display: -webkit-flex;
