去掉Swiper 添加中文字体 去掉钻石 界面简洁化

--- a/client/stylesheets/aside/aside.import.less
+++ b/client/stylesheets/aside/aside.import.less
@@ -5,6 +5,8 @@
 	width: 50%;
 	height: 100%;
 	background-color: #6c5b7b;
+	font-family: 'FZ-Song', sans-serif;
+	font-size: 16px;
 	z-index: 200;
 	// transform: -webkit-translate(-100%) scale(0);
 	// transform: -moz-translate(-100%) scale(0);
