--- a/client/stylesheets/fonts.import.less
+++ b/client/stylesheets/fonts.import.less
@@ -2,3 +2,8 @@
     font-family: 'Ailerons-Typeface';
     src: url('/font/Ailerons-Typeface.otf');
 }
+
+@font-face {
+    font-family: 'FZ-Song';
+    src: url('/font/FZSong.TTF');
+}
