--- a/client/stylesheets/header/header.import.less
+++ b/client/stylesheets/header/header.import.less
@@ -8,8 +8,9 @@
 	background-color: @mainBgColor;
 	font-weight: normal;
 	text-align: center;
-	font-family: 'Ailerons-Typeface', sans-serif;
+	font-family: 'FZ-Song', 'Ailerons-Typeface', sans-serif;
 	font-size: 24px;
+	letter-spacing: .5em;
 	height: 30px;
 	width: 100%;
 	z-index: 200;
