--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -7,11 +7,12 @@
 		{{#if isActiveRoute 'detail.page'}}
 			<i class="go-back"></i>
 			
-			<div class="diamond">
+			<!-- <div class="diamond">
 				<img src="/img/animat-diamond-color.gif" alt="">
-			</div>
+			</div> -->
 		{{/if}}
 		
-		Zhihu Daily
+		<!-- Zhihu Daily -->
+		<span>知乎日报</span>
 	</h1>
 </template>
