--- a/client/stylesheets/components/pagination/pagination.import.less
+++ b/client/stylesheets/components/pagination/pagination.import.less
@@ -15,6 +15,9 @@
          -webkit-box-flex: 1;
         text-align: center;
         cursor: pointer;
+        border-bottom: 2px solid @mainBgColor;
+        font-family: 'Ailerons-Typeface', sans-serif;
+        font-size: 18px;
 
         &:active {
             background-color: #eee;
