--- a/client/stylesheets/homePage/homePage.import.less
+++ b/client/stylesheets/homePage/homePage.import.less
@@ -24,6 +24,7 @@
         padding: 15px;
         font-family: 'Ailerons-Typeface', sans-serif;
         font-size: 24px;
+        text-align: center;
     }
     .head
     {
