--- a/client/templates/components/pagination/pagination.html
+++ b/client/templates/components/pagination/pagination.html
@@ -1,6 +1,6 @@
 <template name="pagination">
 	<div class="pagination">
-		<div class="next">后一天</div>
-		<div class="prev">前一天</div>
+		<div class="prev">Prev</div>
+		<div class="next">Next</div>
 	</div>
 </template>
