恢复swiper， 修复标题闪烁

--- a/client/stylesheets/components/swiper/swiper.import.less
+++ b/client/stylesheets/components/swiper/swiper.import.less
@@ -14,13 +14,16 @@
     		width: 100%;
     	}
     	p {
+            width: 100%;
     		position: absolute;
-    		bottom: 20px;
+    		bottom: 5px;
     		left: 0;
     		color: #fff;
-    		margin: 15px;
-    		font-size: 22px;
+    		margin: 0;
+    		font-size: 18px;
             text-align: justify;
+            background-color: rgba(50,50,50,0.6);
+            padding: 5px 10px 25px;
     	}
 
     }
