--- a/client/stylesheets/homePage/homePage.import.less
+++ b/client/stylesheets/homePage/homePage.import.less
@@ -106,7 +106,6 @@
             flex: 3;
 
             margin-left: 35px;
-            margin-top: 10px;
 
             text-align: left;
         }
@@ -119,6 +118,7 @@
 
 .theme-page {
     .theme-logo {
+        height: 131px;
         img {
             width: 100%;
         }
