--- a/client/templates/homePage/mainPage/mainPage.html
+++ b/client/templates/homePage/mainPage/mainPage.html
@@ -1,9 +1,9 @@
 <template name="mainPage">
 	<section class="main-page">
-	<!-- {{#if isTrashBrowser}}
+	{{#if isTrashBrowser}}
 	{{else}}
 		{{> swiper}}
-	{{/if}} -->
+	{{/if}}
 
 		<h3 class="time-line">{{getToday}}</h3>
 
