--- a/client/stylesheets/components/swiper/swiper.import.less
+++ b/client/stylesheets/components/swiper/swiper.import.less
@@ -24,6 +24,7 @@
             text-align: justify;
             background-color: rgba(50,50,50,0.6);
             padding: 5px 10px 25px;
+            box-sizing: border-box;
     	}
 
     }
