fix bug && fix ui

--- a/client/stylesheets/components/loading/loading.import.less
+++ b/client/stylesheets/components/loading/loading.import.less
@@ -2,6 +2,8 @@
 {
     position: relative;
 
+    margin-top: 50px;
+
     display: block;
 
     width: 40px;
@@ -18,7 +20,7 @@
 .tcon-loader--spinner360:before,
 .tcon-loader--spinner360:after
 {
-    position: absolute; 
+    position: absolute;
 
     display: block;
 
@@ -78,7 +80,7 @@
     overflow: hidden;
     clip: rect(0 0 0 0);
 
-    width: 1px; 
+    width: 1px;
     height: 1px;
     margin: -1px;
     padding: 0;
@@ -93,7 +95,7 @@
     overflow: visible;
     clip: auto;
 
-    width: auto; 
+    width: auto;
     height: auto;
     margin: 0;
 }
