--- a/client/stylesheets/components/swiper/swiper.import.less
+++ b/client/stylesheets/components/swiper/swiper.import.less
@@ -1,6 +1,6 @@
 .swiper-container {
     width: 100%;
-    
+
     .swiper-wrapper {
         width: 100%;
     }
@@ -16,7 +16,7 @@
     	p {
             width: 100%;
     		position: absolute;
-    		bottom: 5px;
+    		bottom: 0;
     		left: 0;
     		color: #fff;
     		margin: 0;
@@ -33,7 +33,7 @@
     	background-color: #f48b94;
     }
 
-}   
+}
     @media screen and (min-width: 600px) {
         .swiper-container {
             width: auto;
