--- a/client/stylesheets/homePage/homePage.import.less
+++ b/client/stylesheets/homePage/homePage.import.less
@@ -71,7 +71,7 @@
         {
             background-color: transparent;
             width: 25%;
-            -webkit-box-flex: 1; 
+            -webkit-box-flex: 1;
             -webkit-flex: 1;
             -moz-flex: 1;
             -ms-flex: 1;
@@ -81,14 +81,14 @@
             {
                 width: 60px;
                 height: 60px;
-                border-radius: 50%;
+                // border-radius: 50%;
             }
         }
         .title
         {
             font-size: 16px;
             width: 75%;
-            -webkit-box-flex: 3; 
+            -webkit-box-flex: 3;
             display: -webkit-flex;
             display: -moz-flex;
             display: -ms-flex;
@@ -126,5 +126,6 @@
 
     h2 {
         margin: 15px;
+        color: #fff;
     }
 }
